# GarminFitBot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml
backend/: .env.example  Makefile  README.md  README_dict_converter.md  alembic.ini  cli_tools.py  config.py  docker-compose.celery.yml  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_celery.py  run_tests.py  test_rabbitmq.py
backend/app/agent/: prompt.py  react_agent.py  state.py
backend/app/domain/: __init__.py  activity.py  daily_summary.py  heart_rate.py  hrv.py  steps.py  stress.py
backend/app/model/: __init__.py  activity.py  analytics.py  heart_rate.py  sleep.py  steps.py  stress.py  temp_token.py  user.py
backend/app/service/: __init__.py  _base_service.py  auth_manager.py  data_collector_service.py  date_parser_service.py  stats_service.py  summary_service.py  time_series_service.py  token_service.py
backend/core/: celery_app.py  config.py
backend/core/db/: __init__.py  base_model.py  celery_session.py  session.py
backend/core/util/: aws.py  dict_converter.py  model_generator.py  redis.py  safe_access.py  task_id.py
backend/data/: activity.py  hrv.py
backend/db/: db.py  session.py
backend/db/model/: __init__.py  activity.py  analytics.py  base.py  heart_rate.py  sleep.py  steps.py  stress.py  user.py
backend/docker/: Dockerfile  Dockerfile.celery
backend/domain/: __init__.py  daily_summary.py  heart_rate.py  steps.py  stress.py
backend/migration/: README  env.py
backend/migration/versions/: 6afbd2bd2575_change_relationship.py  9fb33a188d4a_change_oauth_token_columns_to_text_type.py  b271bc4e34d6_update_user_information.py  (+3 more)
backend/model/: __init__.py  base.py  heart_rate.py  sleep.py  steps.py  stress.py  user.py
backend/prometheus/: prometheus.yml.template  promtail-config.yml.template
backend/script/: run_celery.py  test_rabbitmq.py  upload_env_to_ssm.py
backend/service/: _base_service.py  stats_service.py  summary_service.py  time_series_service.py
backend/services/: auth_manager.py  garmin_api_service.py  garmin_data_service.py
backend/task/: __init__.py  agent_task.py  base.py  celery_app.py  data_collection.py  garmin_collector.py  partition_manager.py  util.py
backend/tests/: __init__.py  test_dict_converter.py
backend/util/: model_generator.py
(+57 files in other folders)
