[project]
name = "backend"
version = "0.1.0"
description = "Backend for Garmin Fit Bot"
authors = [{ name = "Chooooooo", email = "contact@choo.ooo" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "garth (>=0.5.2,<0.6.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
]

[tool.setuptools]
packages = ["api", "app", "core", "task", "migration"]

[project.optional-dependencies]
dev = ["ruff>=0.3.0", "mypy>=1.9.0", "black>=24.3.0", "isort>=5.13.0"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
ignore = ["B008", "B904"] # Depends와 Exception 관련 경고 무시

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.uvicorn]
app = "main:app"
host = "0.0.0.0"
port = 8000
reload = true
